Enhances house access control and data retrieval
Improves security by adding a null check for houseId in the access aspect.
Also, it retrieves and sets the creator's username in the HouseResponse,
improving the information provided to the client. Finally, it excludes
findUserHouses method to be checked by the aspect